// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should render correctly 1`] = `
<div>
  <a
    class="sc-hKMtZM jtmiCh button__a"
    href="/test"
  >
    <span
      class="sc-eCYdqJ ghZAyu"
    />
  </a>
</div>
`;

exports[`<Button /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    class="sc-hKMtZM jtmiCh button__a"
    href="https://duckduckgo.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="sc-eCYdqJ ghZAyu"
    />
  </a>
</div>
`;

exports[`<Button /> Should render correctly with custom className 1`] = `
<div>
  <a
    class="sc-hKMtZM jtmiCh test-custom-classname"
    href="/test"
  >
    <span
      class="sc-eCYdqJ ghZAyu"
    />
  </a>
</div>
`;

exports[`<Button /> Should render with nextified href 1`] = `
<div>
  <a
    class="sc-hKMtZM jtmiCh button__a"
    href="/blog/test"
  >
    <span
      class="sc-eCYdqJ ghZAyu"
    />
  </a>
</div>
`;
